# stock-dashboard

./: .env-example  .gitignore  Cargo.toml  README.md  docker-compose.yml  index.html  prometheus.yml  pyproject.toml
integration/: process.py
src/: main.rs
src/components/: mod.rs  stock_card.rs
stockdash/: main.py
